--- a/tmux.conf
+++ b/tmux.conf
@@ -6,3 +6,15 @@ unbind C-b
 
 # Copy Mode vimkeys
 setw -g mode-keys vi
+unbind [
+bind Escape copy-mode
+unbind p
+bind p paste-buffer
+bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'y' copy-selection
+
+# vim-like pane nav
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
