--- a/tmux.conf
+++ b/tmux.conf
@@ -17,6 +17,9 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+# vim mode switch delay fix
+set -sg escape-time 0
+
 # colors
 set -g default-terminal "screen-256color"
 
