folds and reorg

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,27 +1,28 @@
-# remap prefix to Control + a
+# remap prefix to Control + a {{{1
 set -g prefix C-a
-# bind 'C-a C-a' to type 'C-a'
+# bind 'C-a C-a' to type 'C-a' {{{1
 bind C-a send-prefix
 unbind C-b
 
-# Copy Mode vimkeys
+# Copy Mode vimkeys {{{1
 setw -g mode-keys vi
 unbind p
 bind p paste-buffer
 bind-key -t vi-copy 'v' begin-selection
 bind-key -t vi-copy 'y' copy-selection
 
-# vim-like pane nav
+# vim-like pane nav {{{1
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-# vim mode switch delay fix
+# vim mode switch delay fix {{{1
 set -sg escape-time 0
 
-# colors
+# colors {{{1
 set -g default-terminal "screen-256color"
 
-# zsh
+# zsh {{{1
 set-option -g default-shell /bin/zsh
+# }}} vim: fdm=marker
