comments. remap space.

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,28 +1,46 @@
-# remap prefix to Control + a {{{1
+# Prefix {{{1
+## remap to C-a because C-b is literally the worst
 set -g prefix C-a
-# bind 'C-a C-a' to type 'C-a' {{{1
 bind C-a send-prefix
 unbind C-b
 
-# Copy Mode vimkeys {{{1
+# Copy Mode {{{1
+## make it more vimlike
 setw -g mode-keys vi
 unbind p
 bind p paste-buffer
 bind-key -t vi-copy 'v' begin-selection
 bind-key -t vi-copy 'y' copy-selection
 
-# vim-like pane nav {{{1
+# Navigation {{{1
+## C-a {hjkl} = more vimlike
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+## Show `C-a q` for a bit longer
+set display-panes-time 2000 #2s
+## Sometimes you want to click
+set mouse on
+## stop renaming my windows
+set allow-rename off
 
-# vim mode switch delay fix {{{1
+# Fixes {{{1
+## there's an escape-time default?
+## made switching to normal mode in vim a nightmare
 set -sg escape-time 0
+## I never want to cycle layouts
+## But I always accidentally hit Space
+## And I want faster access to command-prompt
+bind Space command-prompt
+unbind :
 
-# colors {{{1
+# Looks {{{1
 set -g default-terminal "screen-256color"
+## border colors:
+set -g pane-border-fg black
+set -g pane-active-border-fg cyan
 
-# zsh {{{1
+# Shell {{{1
 set-option -g default-shell /bin/zsh
 # }}} vim: fdm=marker
