--- a/tmux.conf
+++ b/tmux.conf
@@ -1,8 +1,8 @@
 # Prefix {{{1
 ## remap to C-a because C-b is literally the worst
 set -g prefix C-a
-bind C-a send-prefix
-unbind C-b
+bind a send-prefix
+unbind C-b # diagf
 
 # Copy Mode {{{1
 ## make it more vimlike
@@ -18,12 +18,20 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+## Quick jump back
+bind C-a last-pane
 ## Show `C-a q` for a bit longer
-set display-panes-time 2000 #2s
-## Sometimes you want to click
+set display-panes-time 2000 # 2s
+## sometimes you just want to use the mouse
+## click pane to select
+## click status line to select window
+## click+drag borders to resize
 set mouse on
 ## stop renaming my windows
 set allow-rename off
+## nudge..
+bind > resize-pane -R 10
+bind < resize-pane -L 10
 
 # Fixes {{{1
 ## there's an escape-time default?
@@ -34,6 +42,10 @@ set -sg escape-time 0
 ## And I want faster access to command-prompt
 bind Space command-prompt
 unbind :
+## Reload conf
+bind r source-file ~/.tmux.conf \; display-message "Config reloaded!"
+## Default status update is 15 seconds
+set status-interval 5
 
 # Looks {{{1
 set -g default-terminal "screen-256color"
