--- a/tmux.conf
+++ b/tmux.conf
@@ -18,8 +18,6 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
-## Quick jump back
-bind C-a last-pane
 ## Show `C-a q` for a bit longer
 set display-panes-time 2000 # 2s
 ## sometimes you just want to use the mouse
@@ -46,13 +44,12 @@ unbind :
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded!"
 ## Default status update is 15 seconds
 set status-interval 5
+## Shell
+set-option -g default-shell /bin/zsh
 
 # Looks {{{1
 set -g default-terminal "screen-256color"
 ## border colors:
 set -g pane-border-fg black
 set -g pane-active-border-fg cyan
-
-# Shell {{{1
-set-option -g default-shell /bin/zsh
 # }}} vim: fdm=marker
