--- a/tmux.conf
+++ b/tmux.conf
@@ -51,5 +51,5 @@ set-option -g default-shell /bin/zsh
 set -g default-terminal "screen-256color"
 ## border colors:
 set -g pane-border-fg black
-set -g pane-active-border-fg cyan
+set -g pane-active-border-fg brightred
 # }}} vim: fdm=marker
