--- a/tmux.conf
+++ b/tmux.conf
@@ -19,14 +19,14 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 ## Show `C-a q` for a bit longer
-set display-panes-time 2000 # 2s
+set -g display-panes-time 2000 # 2s
 ## sometimes you just want to use the mouse
 ## click pane to select
 ## click status line to select window
 ## click+drag borders to resize
-set mouse on
+set -g mouse on
 ## stop renaming my windows
-set allow-rename off
+set -g allow-rename off
 ## nudge..
 bind > resize-pane -R 10
 bind < resize-pane -L 10
@@ -43,7 +43,7 @@ unbind :
 ## Reload conf
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded!"
 ## Default status update is 15 seconds
-set status-interval 5
+set -g status-interval 5
 ## Shell
 set-option -g default-shell /bin/zsh
 
