update status bar 🐢

--- a/tmux.conf
+++ b/tmux.conf
@@ -30,6 +30,11 @@ set -g allow-rename off
 ## nudge..
 bind > resize-pane -R 10
 bind < resize-pane -L 10
+## splits
+bind \ split-window -h # get horizontal
+bind - split-window -v # vsplit
+unbind '"'
+unbind %
 
 # Fixes {{{1
 ## there's an escape-time default?
@@ -49,7 +54,20 @@ set-option -g default-shell /bin/zsh
 
 # Looks {{{1
 set -g default-terminal "screen-256color"
+set -g aggressive-resize on
 ## border colors:
 set -g pane-border-fg black
 set -g pane-active-border-fg brightred
+## statusbar
+set-option -g status-utf8 on
+set -g status-bg green
+set -g status-fg black
+set -g status-left-length 20
+set -g status-left '🐢 #h|#S'           # turtle hostname|sessionname
+set -g status-right '%h%d %l:%M%p 🐢 '  # month day time turtle
+set -g status-justify centre
+set-window-option -g window-status-current-bg yellow
+## messages
+set -g message-fg white
+set -g message-bg red
 # }}} vim: fdm=marker
