--- a/tmux.conf
+++ b/tmux.conf
@@ -70,4 +70,7 @@ set-window-option -g window-status-current-bg yellow
 ## messages
 set -g message-fg white
 set -g message-bg red
+## bells
+set -g visual-bell on
+set -g bell-action other
 # }}} vim: fdm=marker
