--- a/tmux.conf
+++ b/tmux.conf
@@ -51,12 +51,18 @@ bind r source-file ~/.tmux.conf \; display-message "Config reloaded!"
 set -g status-interval 5
 ## Shell
 set-option -g default-shell /bin/zsh
+## pbcopy/pbpaste
+if 'command -v reattach-to-user-namespace >/dev/null' \
+    'set -gq @osx-pasteboard true'
+
+if 'tmux show -gv @osx-clipboard' \
+    'set -g default-command "reattach-to-user-namespace -l $SHELL"'
 
 # Looks {{{1
 set -g default-terminal "screen-256color"
 set -g aggressive-resize on
 ## border colors:
-set -g pane-border-fg black
+set -g pane-border-fg green
 set -g pane-active-border-fg brightred
 ## statusbar
 set-option -g status-utf8 on
@@ -70,7 +76,11 @@ set-window-option -g window-status-current-bg yellow
 ## messages
 set -g message-fg white
 set -g message-bg red
-## bells
-set -g visual-bell on
-set -g bell-action other
+# Sounds? {{{1
+## beeps and bells
+set-option -g visual-activity off
+set-option -g visual-bell off
+set-option -g visual-silence off
+set-window-option -g monitor-activity off
+set-option -g bell-action none
 # }}} vim: fdm=marker
