--- a/tmux.conf
+++ b/tmux.conf
@@ -18,6 +18,8 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+## jump to previously used window
+bind C-a last-window
 ## Show `C-a q` for a bit longer
 set -g display-panes-time 2000 # 2s
 ## sometimes you just want to use the mouse
