--- a/tmux.conf
+++ b/tmux.conf
@@ -62,7 +62,7 @@ if 'tmux show -gv @osx-clipboard' \
 
 # Looks {{{1
 set -g default-terminal "screen-256color"
-set -g aggressive-resize on
+set -g aggressive-resize on # redraws screen on resize
 ## border colors:
 set -g pane-border-fg green
 set -g pane-active-border-fg brightred
@@ -74,7 +74,10 @@ set -g status-left-length 20
 set -g status-left '🐢 #h|#S'           # turtle hostname|sessionname
 set -g status-right '%h%d %l:%M%p 🐢 '  # month day time turtle
 set -g status-justify centre
-set-window-option -g window-status-current-bg yellow
+## active window
+set-window-option -g window-status-current-bg green
+set-window-option -g window-status-current-fg black
+set-window-option -g window-status-current-attr bold
 ## messages
 set -g message-fg white
 set -g message-bg red
