--- a/tmux.conf
+++ b/tmux.conf
@@ -53,12 +53,11 @@ bind r source-file ~/.tmux.conf \; display-message "Config reloaded!"
 set -g status-interval 5
 ## Shell
 set-option -g default-shell /bin/zsh
-## pbcopy/pbpaste
-if 'command -v reattach-to-user-namespace >/dev/null' \
-    'set -gq @osx-pasteboard true'
-
-if 'tmux show -gv @osx-clipboard' \
-    'set -g default-command "reattach-to-user-namespace -l $SHELL"'
+## pbcopy/pbpaste (`brew install reattach-to-user-namespace`)
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+## Update default binding of `Enter` to also use copy-pipe
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Looks {{{1
 set -g default-terminal "screen-256color"
