--- a/tmux.conf
+++ b/tmux.conf
@@ -9,8 +9,8 @@ unbind C-b # diagf
 setw -g mode-keys vi
 unbind p
 bind p paste-buffer
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
+bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
+bind-key -T copy-mode-vi 'y' send-keys -X copy-selection
 
 # Navigation {{{1
 ## C-a {hjkl} = more vimlike
@@ -54,10 +54,9 @@ set -g status-interval 5
 ## Shell
 set-option -g default-shell /bin/zsh
 ## pbcopy/pbpaste (`brew install reattach-to-user-namespace`)
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
 ## Update default binding of `Enter` to also use copy-pipe
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Looks {{{1
 set -g default-terminal "screen-256color"
