tarNATION tmux quit breaking stuff!!!!

--- a/tmux.conf
+++ b/tmux.conf
@@ -9,15 +9,15 @@ unbind C-b # diagf
 setw -g mode-keys vi
 unbind p
 bind p paste-buffer
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
+bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
+bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
 # Navigation {{{1
 ## C-a {hjkl} = more vimlike
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+bind-key h select-pane -L
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key l select-pane -R
 ## jump to previously used window
 bind C-a last-window
 ## Show `C-a q` for a bit longer
@@ -29,9 +29,6 @@ set -g display-panes-time 2000 # 2s
 set -g mouse on
 ## stop renaming my windows
 set -g allow-rename off
-## nudge..
-bind > resize-pane -R 10
-bind < resize-pane -L 10
 ## splits
 bind \ split-window -h # get horizontal
 bind - split-window -v # vsplit
@@ -39,7 +36,7 @@ unbind '"'
 unbind %
 
 # Fixes {{{1
-## there's an escape-time default?
+## there's an escape-time default????????
 ## made switching to normal mode in vim a nightmare
 set -sg escape-time 0
 ## I never want to cycle layouts
@@ -54,36 +51,11 @@ set -g status-interval 5
 ## Shell
 set-option -g default-shell /bin/zsh
 ## pbcopy/pbpaste (`brew install reattach-to-user-namespace`)
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi y send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
 ## Update default binding of `Enter` to also use copy-pipe
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
-
+unbind-key -T copy-mode-vi Enter
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
 # Looks {{{1
 set -g default-terminal "screen-256color"
 set -g aggressive-resize on # redraws screen on resize
-## border colors:
-set -g pane-border-fg green
-set -g pane-active-border-fg brightred
-## statusbar
-set -g status-bg green
-set -g status-fg black
-set -g status-left-length 20
-set -g status-left '🐢 #h|#S'           # turtle hostname|sessionname
-set -g status-right '%h%d %l:%M%p 🐢 '  # month day time turtle
-set -g status-justify centre
-## active window
-set-window-option -g window-status-current-bg green
-set-window-option -g window-status-current-fg black
-set-window-option -g window-status-current-attr bold
-## messages
-set -g message-fg white
-set -g message-bg red
-# Sounds? {{{1
-## beeps and bells
-set-option -g visual-activity off
-set-option -g visual-bell off
-set-option -g visual-silence off
-set-window-option -g monitor-activity off
-set-option -g bell-action none
 # }}} vim: fdm=marker
