fix broken tmux config
because tmux breaks something everytime it updates

https://github.com/tmux/tmux/issues/1990#issuecomment-560477212

--- a/tmux.conf
+++ b/tmux.conf
@@ -30,7 +30,7 @@ set -g mouse on
 ## stop renaming my windows
 set -g allow-rename off
 ## splits
-bind \ split-window -h # get horizontal
+bind \\ split-window -h # get horizontal
 bind - split-window -v # vsplit
 unbind '"'
 unbind %
