--- a/tmux.conf
+++ b/tmux.conf
@@ -9,8 +9,8 @@ unbind C-b # diagf
 setw -g mode-keys vi
 unbind p
 bind p paste-buffer
-bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
-bind-key -T copy-mode-vi 'y' send-keys -X copy-selection
+bind-key -T copy-mode-vi 'v' end-keys -X copy-pipe-and-cancel "pbcopy"
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
 
 # Navigation {{{1
 ## C-a {hjkl} = more vimlike
@@ -50,11 +50,6 @@ bind r source-file ~/.tmux.conf \; display-message "Config reloaded!"
 set -g status-interval 5
 ## Shell
 set-option -g default-shell /bin/zsh
-## pbcopy/pbpaste (`brew install reattach-to-user-namespace`)
-bind-key -T copy-mode-vi y send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
-## Update default binding of `Enter` to also use copy-pipe
-unbind-key -T copy-mode-vi Enter
-bind-key -T copy-mode-vi Enter send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
 # Looks {{{1
 set -g default-terminal "screen-256color"
 set -g aggressive-resize on # redraws screen on resize
