--- a/tmux.conf
+++ b/tmux.conf
@@ -9,7 +9,8 @@ unbind C-b # diagf
 setw -g mode-keys vi
 unbind p
 bind p paste-buffer
-bind-key -T copy-mode-vi 'v' end-keys -X copy-pipe-and-cancel "pbcopy"
+bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
+bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel "pbcopy"
 bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
 
 # Navigation {{{1
