--- a/tmux.conf
+++ b/tmux.conf
@@ -10,8 +10,8 @@ setw -g mode-keys vi
 unbind p
 bind p paste-buffer
 bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
-bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel "pbcopy"
-bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
+bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard"
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard"
 
 # Navigation {{{1
 ## C-a {hjkl} = more vimlike
