--- a/tmux.conf
+++ b/tmux.conf
@@ -51,7 +51,14 @@ bind r source-file ~/.tmux.conf \; display-message "Config reloaded!"
 set -g status-interval 5
 ## Shell
 set-option -g default-shell /bin/zsh
+
 # Looks {{{1
 set -g default-terminal "screen-256color"
 set -g aggressive-resize on # redraws screen on resize
+
+# Plugins {{{1
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-urlview'
+
+run '~/.tmux/plugins/tpm/tpm'
 # }}} vim: fdm=marker
