--- a/tmux.conf
+++ b/tmux.conf
@@ -46,7 +46,7 @@ set -sg escape-time 0
 bind Space command-prompt
 unbind :
 ## Reload conf
-bind r source-file ~/.tmux.conf \; display-message "Config reloaded!"
+bind r source-file ~/.config/tmux/tmux.conf \; display-message "Config reloaded!"
 ## Default status update is 15 seconds
 set -g status-interval 5
 ## Shell
