--- a/tmux.conf
+++ b/tmux.conf
@@ -59,6 +59,9 @@ set -g aggressive-resize on # redraws screen on resize
 # Plugins {{{1
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-urlview'
+set -g @plugin 'sainnhe/tmux-fzf'
+
+TMUX_FZF_OPTIONS="-p -w 80% -h 60% -m"
 
 run '~/.tmux/plugins/tpm/tpm'
 # }}} vim: fdm=marker
