--- a/tmux.conf
+++ b/tmux.conf
@@ -31,8 +31,8 @@ set -g mouse on
 ## stop renaming my windows
 set -g allow-rename off
 ## splits
-bind \\ split-window -h # get horizontal
-bind - split-window -v # vsplit
+bind \\ split-window -h -c "#{pane_current_path}" # get horizontal
+bind - split-window -v -c "#{pane_current_path}"  # vsplit
 unbind '"'
 unbind %
 
