--- a/tmux.conf
+++ b/tmux.conf
@@ -46,15 +46,18 @@ set -sg escape-time 0
 bind Space command-prompt
 unbind :
 ## Reload conf
-bind r source-file ~/.config/tmux/tmux.conf \; display-message "Config reloaded!"
+bind r source-file ~/dotfiles/tmux.conf \; display-message "Config reloaded!"
 ## Default status update is 15 seconds
 set -g status-interval 5
 ## Shell
 set-option -g default-shell /bin/zsh
+## toggle status line
+bind F1 set-option status
 
 # Looks {{{1
-set -g default-terminal "screen-256color"
+#set -g default-terminal "screen-256color"
 set -g aggressive-resize on # redraws screen on resize
+set -g status-style bg=hotpink
 
 # Plugins {{{1
 set -g @plugin 'tmux-plugins/tpm'
@@ -62,6 +65,8 @@ set -g @plugin 'tmux-plugins/tmux-urlview'
 set -g @plugin 'sainnhe/tmux-fzf'
 
 TMUX_FZF_OPTIONS="-p -w 80% -h 60% -m"
+TMUX_FZF_LAUNCH_KEY="C-f"
+TMUX_FZF_ORDER="window|pane|clipboard|command|keybinding|process|session"
 
 run '~/.tmux/plugins/tpm/tpm'
 # }}} vim: fdm=marker
